--- a/q/84.html
+++ b/q/84.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>532</td><td>Casio BASIC Casio FX9750GIII</td><td>241002T200928Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/275905#275905">madeforl</a></td></tr>
+<tr d-ix="0"><td>468</td><td>Casio BASIC Casio FX9750GIII</td><td>241002T200928Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/275905#275905">madeforl</a></td></tr>
 <tr d-ix="1"><td>349</td><td>Uiua</td><td>240821T131312Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/275078#275078">jan</a></td></tr>
 <tr d-ix="2"><td>535</td><td>sed 4.2.2 rn</td><td>240424T195314Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/272786#272786">guest430</a></td></tr>
 <tr d-ix="3"><td>611</td><td>Acc!!</td><td>240521T033056Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/273212#273212">engineer</a></td></tr>
@@ -112,46 +112,45 @@
 <tr d-ix="83"><td>204</td><td>Windows PowerShell</td><td>110213T212506Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/921#921">Joey</a></td></tr>
 <tr d-ix="84"><td>368</td><td>C</td><td>110131T002311Z</td><td><a href="https://codegolf.stackexchange.com/questions/84/interpret-brainfuck/267#267">jtjacque</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1>Casio BASIC (Casio FX-9750GIII), 532 bytes</h1>
-<pre><code>&quot;............................... !.#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[.]^_`ABCDEFGHIJKLMNOPQRSTUVWXYZ{|}~.&quot;→Str 3
-50→Dim List 1
+<div id="pu0" class="pu"><h1>Casio BASIC (Casio FX-9750GIII), <s>532</s> 468 bytes</h1>
+<pre><code>&quot; !.#$%&amp;'()*+,-./0123456789:;&lt;=&gt;?@ABCDEFGHIJKLMNOPQRSTUVWXYZ[.]^_`ABCDEFGHIJKLMNOPQRSTUVWXYZ{|}~.&quot;→Str 3
+255→Dim List 1
+{0,-1,1}→List 2
 50→Dim List 3
-1→P
-1→S
-1→L
-For 1→I To StrLen(Str 1)
-StrMid(Str 1,I,1)→Str 2
+1→L~S
+For 1→I To StrLen(Str 1
+StrMid(Str 1,I,1→Str 2
 If Not D
 Then If Not StrCmp(Str 2,&quot;.&quot;
-Then Q+1→Q
-1+MOD(Q,20→Z
-Locate Z,(Int (Q/20))+1,StrMid(Str 3,List 1[P],1)
+Then 1+MOD(Q-1,21→Z
+List 1[P]-31→J
+J&lt;1⇒15→J
+Locate Z,(Int (Q÷22))+2,StrMid(Str 3,J,1)
+Isz Q
 IfEnd
-MOD(List 1[P]+(Not StrCmp(Str 2,&quot;+&quot;))-(Not StrCmp(Str 2,&quot;-&quot;)),255)→List 1[P]
-MOD(P+(Not StrCmp(Str 2,&quot;2&quot;))-(Not StrCmp(Str 2,&quot;1&quot;)),255)→P
+MOD(List 1[P]+List 2[StrScr(&quot;-+&quot;,Str 2)+1],255→List 1[P]
+1+MOD(P+List 2[StrSrc(&quot;12&quot;,Str 2)+1]-1,255→P
 IfEnd
 If Not StrCmp(Str 2,&quot;[&quot;
-Then If Not List 1[P] Or D=1
-Then S+1→S
+Then If List 1[P]+D
+Then I→List 3[L]
+Isz L
+Else Isz S
 1→D
-Else I→List 3[L]
-L+1→L
 IfEnd
 IfEnd
 If Not StrCmp(Str 2,&quot;]&quot;
-Then S-(S&gt;1)→S
-If S(D
+Then S&gt;1⇒Dsz S
+If SD
 Then 0→D
-S-1→S
-Else If Not List 1[P]
-Then L-1→L
-Else List 3[L-1]→I
+Dsz S
+Else If List 1[P]
+Then List 3[L-1]→I
+Else Dsz L
 IfEnd
 IfEnd
 IfEnd
 Next
-While Not Getkey
-WhileEnd
 </code></pre>
 <p>this isn't perfect AT ALL. you can't do input.</p>
 <p>You have to enter the program into <code>Str 1</code>, and you have to replace <code>&lt;</code> and <code>&gt;</code> with <code>1</code> and <code>2</code> respectively</p>
