--- a/q/86075.html
+++ b/q/86075.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>021</td><td>How dare you fuck the brain</td><td>241003T190824Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275930#275930">Gleb</a></td></tr>
-<tr d-ix="1"><td>018</td><td>Python 3</td><td>240928T034159Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275843#275843">arandomp</a></td></tr>
+<tr d-ix="0"><td>016</td><td>How dare you fuck the brain</td><td>241003T190824Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275930#275930">Gleb</a></td></tr>
+<tr d-ix="1"><td>018</td><td>Python 3</td><td>240928T034159Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275843#275843">a random</a></td></tr>
 <tr d-ix="2"><td>013</td><td>Python 3</td><td>240927T215245Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275834#275834">The Empt</a></td></tr>
 <tr d-ix="3"><td>021</td><td>punchcode</td><td>240927T172355Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275833#275833">madeforl</a></td></tr>
 <tr d-ix="4"><td>016</td><td>Casio BASIC fx9750giii</td><td>240910T143653Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275463#275463">madeforl</a></td></tr>
@@ -304,11 +304,11 @@
 <tr d-ix="275"><td>036</td><td>C</td><td>160721T092341Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86091#86091">xsot</a></td></tr>
 <tr d-ix="276"><td>002</td><td>Jelly</td><td>160721T091553Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86082#86082">TuxCraft</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, 21 bytes</h1>
-<pre><code>^II=+=+II=
-vIN^D^Pv)H
+<div id="pu0" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, <s>21</s> 16 bytes</h1>
+<pre><code>II=+=+II
+D^INv)H
 </code></pre>
-<p><a href="https://tio.run/##fZOxbsIwFEX3fIVxl7guamjVDo3exkAWxNANEinYRkSNjBUCiB9gr/qH/EhqkjgxrWGxEvvce/Pec9SxXG/ka1WVqRIwD@LHl7d3j224AIxxEkVAgerV20fTZJzM9mSi9z2mIAg9Xq9Mk95hneXC/yx2gnx4CGUr/@IxZyoGwBGuNxG6hMy5iimM9LvIr7HxX2zoxBKDceX22feA22FmAFVksvTZuvBNJHkSkuuCSCtDlmyKbZVR3BEAvqqHjmIwKgdNG1pBj1ODh@YBVGi5BQ6bhza0nkh3MAC8kBg1Rwgxq3W2mLRi3S@TOICAGFkz5WvP7vDiOnS6Pt93vfUx59N3J0RMp2GjaCaAWZ4eUFqIlB8RF6tMCo5JuNQbXzXI7Hb318rZtvPpxwqDG2E76crpjFkbq3@I/wmTztEom8Jb/4VcHkuxRZhuy8LPhaz7TLoLWVW/" rel="nofollow noreferrer">Try it online</a></p>
+<p><a href="https://tio.run/##fZOxbsIwFEX3fIVxl7guaihqh0ZvYyAL6tANghRso0SNjBUCKD/AXvUP@ZHUJHEwrWGJEvuee/3ec1RVphs5rusyUQLmQfz48vrmsQ0XgDGOIqBAo8ibLKPZnkz1kscUBKHHmyfTIu@QZrnwP4udIO8eQtnaP@NzpmIAHOFmEaGz/5yrmMJIf4v8Wjb5Kxs6ZUsj48rts78I3A4fRqCKTJY@SwvfRJInIbkuiHQYsrAZtilD3AEAX9VDRzEYyqGmrVrBRU6NPDQvoELLLXDYPHShzUT6jQHghcSo3UKIWa2zYdLBul8mcQABMVg75WvPfvPsOnS6Pt93vXWY0/G7BxHTadgQ7QQwy5MDSgqR8Apxsc6k4JiEK73w1QiZ3e7LtXK27XT8scLgRthOunJ6Y9bF6h/if8K0dzRkW3jnv5CrqhRbhOm2LPxcyKbPpL@Qdf0L" rel="nofollow noreferrer">Try it online</a></p>
 </div>
 <div id="pu1" class="pu"><h2>Python 3, 18 bytes</h2>
 <pre class="lang-python prettyprint-override"><code>print(12345678910)
