--- a/q/275871.html
+++ b/q/275871.html
@@ -26,24 +26,23 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>193</td><td>Haskell</td><td>241003T175243Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275926#275926">Antonio </a></td></tr>
+<tr d-ix="0"><td>192</td><td>Haskell</td><td>241003T175243Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275926#275926">Antonio </a></td></tr>
 <tr d-ix="1"><td>152</td><td>Perl 5</td><td>241002T151123Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275903#275903">Kjetil S</a></td></tr>
 <tr d-ix="2"><td>025</td><td>Charcoal</td><td>240929T211400Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275873#275873">Neil</a></td></tr>
 <tr d-ix="3"><td>105</td><td>JavaScript Node.js</td><td>240930T063843Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275877#275877">l4m2</a></td></tr>
 <tr d-ix="4"><td>027</td><td>Jelly</td><td>240929T210108Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275872#275872">Unrelate</a></td></tr>
 <tr d-ix="5"><td>142</td><td>Python 3.8 prerelease</td><td>240929T212142Z</td><td><a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree/275874#275874">squarero</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>210</s>,<s>196</s>, 193 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://www.haskell.org/" rel="nofollow noreferrer">Haskell</a>, <s>210</s>,<s>196</s>,<s>193</s>,192 bytes</h1>
 
 <pre class="lang-hs prettyprint-override"><code>unlines.g
-g s|l&lt;-div(length s)2,k&lt;-div l 2=1&amp;s&gt;&gt;i[s!!l](2*l+1)l:(k&amp;map(i&quot;/&quot;l.(l-))[1..]++g(l&amp;s))#w#(k&amp;map(i&quot;\\&quot;l)[0..]++g(drop(l+1)s))
-(#)=zipWith(++)
+g s|l&lt;-div(length s)2,k&lt;-div l 2=1&amp;s&gt;&gt;i[s!!l](2*l+1)l:zipWith((.(' ':)).(++))(k&amp;map(i&quot;/&quot;l.(l-))[1..]++g(l&amp;s))(k&amp;map(i&quot;\\&quot;l)[0..]++g(drop(l+1)s))
 (&amp;)=take
-i c n p=n&amp;(p&amp;w++c:w&gt;&gt;=id)
-w=&quot; &quot;:w
+i[c]n p=n&amp;(p&amp;w++c:w)
+w=' ':w
 </code></pre>
 <p>-3 bytes thanks to <a href="https://codegolf.stackexchange.com/questions/275871/draw-a-string-as-a-binary-tree#comment592863_275926">Unrelated String</a></p>
-<p><a href="https://tio.run/##RU3LSsQwFN3nK@6kEBIzrbbLYgqDyGxGGRBx0XZR@4y9zYRJx4KPb68dFV2cwz0P7ukK19eI87vvwW5zv33cbG/hZr8Hz/8kjcrmk0Ftahe0pAX3gdd@pV851qYdO3AiWvffDiBEKmQuSXTqVivMeXSBMhQY854NheWaXlIMOPpCpGEQ5FK2HJkTwpu8v0qWURTp1W9cHQ@Wn58sLcI9od60fdJjx6VcNBNqLPqaaCjBgFWGccsmKct4ShKlK0EmRYHG0zwU2qhl4A64PY0P43FngkZASumaFmc8lz9c1U37f3X6pcfBHGg@fwE" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
+<p><a href="https://tio.run/##TU1NS8NAFLznV2y3sH3PbVabYzCFItJLlYKIhySHmM81L9ulmxrw47fHRgU9zDDMDDNN5tqSaHz352y3ud8@bra37Ga/Z3P/06uiZDwZ0qZ0qvZq5j7o2i/0K1Bp6r5hDoNl@@0wYkG0Em691rGbzSiF4ILkCil80/ZJ9w2AggVbhIgKpESEVnSZBc0vOSkgHzFeKZVKWQMJ9y9PEk4YX/1mxfFgYRo@VzwQGPVZW3o6zlPDbGQEWDFImYcDekM0/Q1jl2kTnbfuGNhT/9Afd0ZVyGLOlzyb8Jz/cFFW9Z9q9EtLnTnwdPwC" rel="nofollow noreferrer" title="Haskell – Try It Online">Try it online!</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://www.perl.org/" rel="nofollow noreferrer">Perl 5</a>, 152 bytes</h1>
 
