--- a/q/258397.html
+++ b/q/258397.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>038</td><td>Casio BASIC fx9750giii</td><td>240910T133256Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/275460#275460">madeforl</a></td></tr>
+<tr d-ix="0"><td>036</td><td>Casio BASIC fx9750giii</td><td>240910T133256Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/275460#275460">madeforl</a></td></tr>
 <tr d-ix="1"><td>036</td><td>TIBASIC</td><td>240918T195535Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/275620#275620">absolute</a></td></tr>
 <tr d-ix="2"><td>002</td><td>Uiua</td><td>240208T070826Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/269893#269893">Adelie</a></td></tr>
 <tr d-ix="3"><td>114</td><td>Acc!!</td><td>240420T051741Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/272680#272680">DLosc</a></td></tr>
@@ -105,24 +105,13 @@
 <tr d-ix="76"><td>016</td><td>JavaScript</td><td>230227T053440Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/258401#258401">Unmitiga</a></td></tr>
 <tr d-ix="77"><td>019</td><td>Python 3</td><td>230227T044952Z</td><td><a href="https://codegolf.stackexchange.com/questions/258397/number-to-binary/258400#258400">SectorCo</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, <s>40</s> 38 bytes</h1>
-<pre><code>?→M
-20→L
-While M
-Locate L,7,MOD(M,2
-Int (.5M→M
-Dsz L
-WhileEnd
+<div id="pu0" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, <s>40</s> <s>38</s> 36 bytes</h1>
+<p><em>(this is a translation of <a href="https://codegolf.stackexchange.com/a/275620/121035">absoluteAquarian's answer</a> in TI-BASIC. rock on, you're cool!)</em></p>
+<pre><code>?→A
+2^-Seq(X,X,Int (ln A÷ln 2),0,-1)A
+MOD(Intg List Ans,2
 </code></pre>
-<p>asks you for a number, then prints it out as binary in the bottom right, and displays the L variable above it for some reason.</p>
-<p>example screen:</p>
-<pre><code>?
-5280
-                    7
-
-
-       1010010100000 
-</code></pre>
+<p>asks you for a number, then prints it out as binary in the form of a list.</p>
 </div>
 <div id="pu1" class="pu"><h1>TI-BASIC, 36 bytes</h1>
 <pre><code>Prompt A
