--- a/q/86075.html
+++ b/q/86075.html
@@ -26,10 +26,10 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>012</td><td>Casio BASIC fx9750giii</td><td>240910T143653Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275463#275463">madeforl</a></td></tr>
-<tr d-ix="1"><td>016</td><td>How dare you fuck the brain</td><td>241003T190824Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275930#275930">Gleb</a></td></tr>
-<tr d-ix="2"><td>018</td><td>Python 3</td><td>240928T034159Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275843#275843">a random</a></td></tr>
-<tr d-ix="3"><td>013</td><td>Python 3</td><td>240927T215245Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275834#275834">The Empt</a></td></tr>
+<tr d-ix="0"><td>013</td><td>Python 3</td><td>240927T215245Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275834#275834">The Empt</a></td></tr>
+<tr d-ix="1"><td>012</td><td>Casio BASIC fx9750giii</td><td>240910T143653Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275463#275463">madeforl</a></td></tr>
+<tr d-ix="2"><td>016</td><td>How dare you fuck the brain</td><td>241003T190824Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275930#275930">Gleb</a></td></tr>
+<tr d-ix="3"><td>018</td><td>Python 3</td><td>240928T034159Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275843#275843">a random</a></td></tr>
 <tr d-ix="4"><td>021</td><td>punchcode</td><td>240927T172355Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/275833#275833">madeforl</a></td></tr>
 <tr d-ix="5"><td>026</td><td>+Output</td><td>240621T014622Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273728#273728">Evylah</a></td></tr>
 <tr d-ix="6"><td>007</td><td>Uiua</td><td>240620T141901Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/273723#273723">Joonas</a></td></tr>
@@ -304,31 +304,31 @@
 <tr d-ix="275"><td>036</td><td>C</td><td>160721T092341Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86091#86091">xsot</a></td></tr>
 <tr d-ix="276"><td>002</td><td>Jelly</td><td>160721T091553Z</td><td><a href="https://codegolf.stackexchange.com/questions/86075/print-numbers-from-1-to-10/86082#86082">TuxCraft</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, <s>16</s> 12 bytes</h1>
-<pre><code>Seq(X,X,1,10,1
-</code></pre>
-<p>outputs a list containing numbers between 1 and 10</p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, <s>21</s> 16 bytes</h1>
-<pre><code>II=+=+II
-D^INv)H
-</code></pre>
-<p><a href="https://tio.run/##fZOxbsIwFEX3fIVxl7guaihqh0ZvYyAL6tANghRso0SNjBUCKD/AXvUP@ZHUJHEwrWGJEvuee/3ec1RVphs5rusyUQLmQfz48vrmsQ0XgDGOIqBAo8ibLKPZnkz1kscUBKHHmyfTIu@QZrnwP4udIO8eQtnaP@NzpmIAHOFmEaGz/5yrmMJIf4v8Wjb5Kxs6ZUsj48rts78I3A4fRqCKTJY@SwvfRJInIbkuiHQYsrAZtilD3AEAX9VDRzEYyqGmrVrBRU6NPDQvoELLLXDYPHShzUT6jQHghcSo3UKIWa2zYdLBul8mcQABMVg75WvPfvPsOnS6Pt93vXWY0/G7BxHTadgQ7QQwy5MDSgqR8Apxsc6k4JiEK73w1QiZ3e7LtXK27XT8scLgRthOunJ6Y9bF6h/if8K0dzRkW3jnv5CrqhRbhOm2LPxcyKbPpL@Qdf0L" rel="nofollow noreferrer">Try it online</a></p>
-</div>
-<div id="pu2" class="pu"><h2>Python 3, 18 bytes</h2>
-<pre class="lang-python prettyprint-override"><code>print(12345678910)
-</code></pre>
-<p>kinda cheeky but ¯\ _(ツ)_/¯</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 13 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 13 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>print(&quot;1&quot;*10)
 </code></pre>
 <p><a href="https://tio.run/##K6gsycjPM/7/v6AoM69EQ8lQScvQQPP/fwA" rel="nofollow noreferrer" title="Python 3 – Try It Online">Try it online!</a></p>
 <ol>
-<li>Nobody said you couldn’t output one unary!</li>
+<li>Nobody said you couldn’t output in unary!</li>
 <li>Nobody said you couldn’t use the same digit for two numbers! (123 would include both 12 and 23)</li>
 </ol>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://support.casio.com/storage/en/manual/pdf/EN/004/fx-9860GIII_Soft_v340_EN.pdf" rel="nofollow noreferrer">Casio BASIC (fx-9750giii)</a>, <s>16</s> 12 bytes</h1>
+<pre><code>Seq(X,X,1,10,1
+</code></pre>
+<p>outputs a list containing numbers between 1 and 10</p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://esolangs.org/wiki/How_dare_you_fuck_the_brain" rel="nofollow noreferrer">How dare you fuck the brain</a>, <s>21</s> 16 bytes</h1>
+<pre><code>II=+=+II
+D^INv)H
+</code></pre>
+<p><a href="https://tio.run/##fZOxbsIwFEX3fIVxl7guaihqh0ZvYyAL6tANghRso0SNjBUCKD/AXvUP@ZHUJHEwrWGJEvuee/3ec1RVphs5rusyUQLmQfz48vrmsQ0XgDGOIqBAo8ibLKPZnkz1kscUBKHHmyfTIu@QZrnwP4udIO8eQtnaP@NzpmIAHOFmEaGz/5yrmMJIf4v8Wjb5Kxs6ZUsj48rts78I3A4fRqCKTJY@SwvfRJInIbkuiHQYsrAZtilD3AEAX9VDRzEYyqGmrVrBRU6NPDQvoELLLXDYPHShzUT6jQHghcSo3UKIWa2zYdLBul8mcQABMVg75WvPfvPsOnS6Pt93vXWY0/G7BxHTadgQ7QQwy5MDSgqR8Apxsc6k4JiEK73w1QiZ3e7LtXK27XT8scLgRthOunJ6Y9bF6h/if8K0dzRkW3jnv5CrqhRbhOm2LPxcyKbPpL@Qdf0L" rel="nofollow noreferrer">Try it online</a></p>
+</div>
+<div id="pu3" class="pu"><h2>Python 3, 18 bytes</h2>
+<pre class="lang-python prettyprint-override"><code>print(12345678910)
+</code></pre>
+<p>kinda cheeky but ¯\ _(ツ)_/¯</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://github.com/madeforlosers/punchtape" rel="nofollow noreferrer">punchcode</a>, <s>30</s> <s>22</s> 21 bytes</h1>
 <p>turns out hardcoding it saved some bytes</p>
