--- a/q/274924.html
+++ b/q/274924.html
@@ -26,13 +26,13 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>010</td><td>Vyxal</td><td>241002T012024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275902#275902">emanresu</a></td></tr>
-<tr d-ix="1"><td>043</td><td>Arturo</td><td>240824T113019Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275127#275127">chunes</a></td></tr>
-<tr d-ix="2"><td>166</td><td>Scala 3</td><td>240824T094435Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275126#275126">138 Aspe</a></td></tr>
-<tr d-ix="3"><td>098</td><td>Google Sheets</td><td>240822T215719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275099#275099">doubleun</a></td></tr>
-<tr d-ix="4"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
-<tr d-ix="5"><td>010</td><td>Nekomata + n</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
-<tr d-ix="6"><td>010</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="0"><td>009</td><td>Jelly</td><td>240812T181812Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274936#274936">Jonathan</a></td></tr>
+<tr d-ix="1"><td>010</td><td>Vyxal</td><td>241002T012024Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275902#275902">emanresu</a></td></tr>
+<tr d-ix="2"><td>043</td><td>Arturo</td><td>240824T113019Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275127#275127">chunes</a></td></tr>
+<tr d-ix="3"><td>166</td><td>Scala 3</td><td>240824T094435Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275126#275126">138 Aspe</a></td></tr>
+<tr d-ix="4"><td>098</td><td>Google Sheets</td><td>240822T215719Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/275099#275099">doubleun</a></td></tr>
+<tr d-ix="5"><td>055</td><td>Python 3</td><td>240812T151642Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274928#274928">xnor</a></td></tr>
+<tr d-ix="6"><td>010</td><td>Nekomata + n</td><td>240813T041130Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274950#274950">alephalp</a></td></tr>
 <tr d-ix="7"><td>189</td><td>Nibbles</td><td>240813T160923Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274958#274958">Dominic </a></td></tr>
 <tr d-ix="8"><td>015</td><td>05AB1E</td><td>240813T084855Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274955#274955">Kevin Cr</a></td></tr>
 <tr d-ix="9"><td>040</td><td>R</td><td>240812T190722Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274937#274937">pajonk</a></td></tr>
@@ -46,7 +46,38 @@
 <tr d-ix="17"><td>048</td><td>JavaScript ES6</td><td>240812T150806Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274926#274926">Arnauld</a></td></tr>
 <tr d-ix="18"><td>015</td><td>Vyxal</td><td>240812T150516Z</td><td><a href="https://codegolf.stackexchange.com/questions/274924/shift-right-by-half-a-trit/274925#274925">lyxal</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 10 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 10 </s> 9 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
+<p>-3 bytes porting <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">Dominic van Essen's</a> implementation of my approach.<br />
+-1 byte thanks to <a href="https://codegolf.stackexchange.com/users/85334/unrelated-string">Unrelated String</a> (golfing the <code>¬</code> out by using a divisibility check.)</p>
+<pre><code>b3ḢḂȧ)3ḍS
+</code></pre>
+<p><strong><a href="https://tio.run/##y0rNyan8/z/J@OGORQ93NJ1Yrglk9Qb////f0NjYHAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/z/J@OGORQ93NJ1Yrglk9Qb/P9z@qGnN///RBjoKhjoKRkBkBsTmOgqmxkBsAhQ1NjaPBQA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
+<h4>How?</h4>
+<pre><code>b3ḢḂȧ)3ḍS - Link: non-negative integer, N
+     )    - for each {I in [1..N] ([] if N==0)}:
+b3        -   convert {I} to base three
+  Ḣ       -   head of {that}
+   Ḃ      -   {that} mod two
+    ȧ     -   {that} logical AND {N}
+      3ḍ  - three divides {that}? (vectorises)
+        S - sum
+</code></pre>
+<hr />
+<h4>Alternative 9</h4>
+<p><sup>Also seems to be a little more efficient, I'm not sure why.</sup></p>
+<p><a href="https://tio.run/##y0rNyan8/z/p4Y5Fjxpmaj/c3Xt4w7F2Y5//h9sfNa35/z/aQEfBUEfBCIjMgNhcR8HUGIhNgKLGxuaxAA" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
+<pre><code>bḢ’+ọðƇ3L - Link: non-negative integer, N
+      Ƈ   - keep those i of [1..N] for which:
+     ð 3  -   f(i, 3):
+b         -     convert {i} to base {3}
+ Ḣ        -     head of {that} -&gt; first trit (2 or 1)
+  ’       -     decrement {that} -&gt; L (1 or 0)
+    ọ     -     {i} order {3} (repeated divisibility count)
+   +      -     {L} add {that}
+        L - length
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 10 bytes</h1>
 <pre><code>'3₌Ḋτh₂+;L
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyJBIiwiIiwiJzPigozhuIrPhGjigoIrO0wiLCIiLCIwXG4xXG4yXG4yNlxuMjdcbjUzXG41NFxuMTMzNyJd" rel="nofollow noreferrer">Try it Online!</a> Port of <a href="https://codegolf.stackexchange.com/a/274936/100664">Jonathan Allan's Jelly answer</a>.</p>
@@ -59,13 +90,13 @@
       ₂    # Is even
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 43 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://arturo-lang.io" rel="nofollow noreferrer">Arturo</a>, 43 bytes</h1>
 <pre class="lang-arturo prettyprint-override"><code>f:$-&gt;n[?n&lt;2-&gt;0-&gt;+?=n/3f 1+f n-1-&gt;1-&gt;0f n-1]
 </code></pre>
 <p><a href="http://arturo-lang.io/playground?T65w2X" rel="nofollow noreferrer">Try it!</a></p>
 <p>Port of l4m2's <a href="https://codegolf.stackexchange.com/a/274930/97916">JavaScript answer</a>.</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 166 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.scala-lang.org/" rel="nofollow noreferrer">Scala 3</a>, 166 bytes</h1>
 <p>166 bytes, it can be golfed more.</p>
 <hr />
 <p>Golfed version. <a href="https://ato.pxeger.com/run?1=RU_BSgMxEL3nK4bSQ9LulrarVtbdgngS9FQ8iUisSYmss5qkpSbsl3jpxeLFD_JvnN0WDHkzzDDvzZvPvVvKSma7n_rpRS093EqDEL_WXqfnv_tnpUFzzK_RJ66N5UR0KbKNtCDLhXrn42QsujKUjuna8sciHfsaMJ2IyIwGLkfOBDVHEa3ya4sgOYqGyeGw5AFoNAymNNyRt0VKFazRmyqGMgyyi9CI2M7SspE2VcUzwbfEJwXSYc3R7TdA6_eVLuDSrlwOl9bKj_uFtwZXDyKHOzQeSogM6G1kBV45fyWdctS9Mc7TLTBJYEr_jDBL4DQjnFA3y2ai45FJ4AhF-s8WR0mAN1rlK-Su10dI59CPuj21d6A2rMXR7253yH8" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -106,7 +137,7 @@ a(n)
 }
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1>Google Sheets, 98 bytes</h1>
+<div id="pu4" class="pu"><h1>Google Sheets, 98 bytes</h1>
 <pre><code>=let(t,base(A1,3),decimal(switch(--left(t),0,0,1,iferror(2&amp;mid(t,2,len(t)-2)),2,1&amp;mid(t,2,99)),3))
 </code></pre>
 <p>Put <span class="math-container">\$n\$</span> in cell <code>A1</code> and the formula in <code>B1</code>.</p>
@@ -125,7 +156,7 @@ a(n)
 )
 </code></pre>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3</a>, 55 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda n,c=1:n&gt;c and f(n,c*3)or[0,(n+c)//3,n-c][n//c]
 </code></pre>
@@ -138,7 +169,7 @@ a(n)
 <p><a href="https://tio.run/##Dc1BCoMwEADAc/OKPWaxokEKRWqf0C@UNLpViLthjWBfn3qa46RfnoW7e9JSaIh@/YweuOen8zzWlpume5A9@sFVZLl2iFgdhVRWoJ1DFokbLGsSzRB1fwcf5gn8BjEYguHEvoQntITGkCgwLAzq@TvZ9upuLfbmknThbPl6DojlDw" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
 <p>Recursive magic based on the original definition, copied from <a href="https://codegolf.stackexchange.com/a/274930/20260">l4m2's JS answer</a>. Thanks to Albert Lang for -2 bytes using the walrus.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-n</code>, 10 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/AlephAlpha/Nekomata" rel="nofollow noreferrer">Nekomata</a> + <code>-n</code>, 10 bytes</h1>
 <pre><code>R~3DᵉlhÖ*ž
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iLzU7PzexJHFNtJJurpKOgpJunlLsgqWlJWm6FuuC6oxdHm7tzMk4PE3r6L4lxUnJxVCpBdsMuAy5jLiMzLiMzLlMjblMTbgMjY3NIbIA" rel="nofollow noreferrer">Attempt This Online!</a></p>
@@ -168,44 +199,6 @@ R~              Choose a number from 1 to the input
          ᵖ≥     Check that the result &lt;= the input
 </code></pre>
 <p><code>-1</code> finds the first valid solution.</p>
-</div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, <s> 13 </s> 10 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h1>
-<p>-3 bytes porting <a href="https://codegolf.stackexchange.com/users/95126/dominic-van-essen">Dominic van Essen's</a> implementation of my approach.</p>
-<pre><code>b3ḢḂȧ%3¬)S
-</code></pre>
-<p><strong><a href="https://tio.run/##y0rNyan8/z/J@OGORQ93NJ1Yrmp8aI1m8P///w2Njc0B" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8/z/J@OGORQ93NJ1Yrmp8aI1m8P/D7Y@a1vz/H22go2Coo2AERGZAbK6jYGoMxCZAUWNj81gA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
-<h4>How?</h4>
-<pre><code>b3ḢḂȧ%3¬)S - Link: non-negative integer, N
-        )  - for each {I in [1..N] ([] if N==0)}:
-b3         -   convert {I} to base three
-  Ḣ        -   head of {that}
-   Ḃ       -   {that} mod two -&gt; L
-     %3    -   {I} mod three -&gt; R
-    ȧ      -   {L} logical AND {R}
-       ¬   -   logical NOT of {that}
-         S - sum
-</code></pre>
-<p>(I sometimes wish there was a logical NAND dyad, or at least one that acts that way with zeros and ones.)</p>
-<hr />
-<h3>Original at 13 <a href="https://github.com/DennisMitchell/jelly/wiki/Code-page" rel="nofollow noreferrer">bytes</a></h3>
-<pre><code>æḟ©3Ḥạ+⁺_®)»ċ
-</code></pre>
-<p>A monadic Link that accepts a non-negative integer, <span class="math-container">\$N\$</span>, and yields the value of <span class="math-container">\$f(n)\$</span>.</p>
-<p><strong><a href="https://tio.run/##ASgA1/9qZWxsef//w6bhuJ/CqTPhuKThuqEr4oG6X8KuKcK7xIv///8xMzM3" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></strong> Or see the <a href="https://tio.run/##y0rNyan8///wsoc75h9aafxwx5KHuxZqP2rcFX9oneah3Ue6/x9uf9S05v//aAMdBUMdBSMgMgNicx0FU2MgNgGKGhubxwIA" rel="nofollow noreferrer" title="Jelly – Try It Online">test-suite</a>.</p>
-<h4>How?</h4>
-<p>Outputs the number of terms less than or equal to <span class="math-container">\$N\$</span> in another sequence - the unique, strictly increasing sequence of non-negative integers, <span class="math-container">\$a\$</span>, such that <span class="math-container">\$a(a(n)) = 3n\$</span>. This is <a href="https://oeis.org/A003605" rel="nofollow noreferrer" title="OEIS">A003605</a>, which gives the indices at which an increase occurs in <span class="math-container">\$f\$</span>.</p>
-<pre><code>æḟ©3Ḥạ+⁺_®)»ċ - Link: non-negative integer, N
-          )   - for each {I in [1..N] ([] if N==0)}:
-æḟ 3          -   floor to the nearest power of three
-  ©           -   (and copy this to the register)
-    Ḥ         -   double {that}
-     ạ        -   {that} absolute difference {I}
-       ⁺      -   do this twice:
-      +       -     add {I}
-        _®    -   subtract the value stored in the register
-           »  - maximum with {N} (vectorises)
-            ċ - count occurrences of {N}
-</code></pre>
 </div>
 <div id="pu7" class="pu"><h1><a href="http://golfscript.com/nibbles/index.html" rel="nofollow noreferrer">Nibbles</a>, 18 nibbles (9 bytes)</h1>
 <pre><code>,|,$~*%$3- 2/`@3
