--- a/index.html
+++ b/index.html
@@ -16,12 +16,13 @@
 <pre>
 " ====================================================================
 "                                                                      
-"   /golfscore                                      20241005T131727Z
+"   /golfscore                                      20241005T171209Z
 "                                                                      
 " ====================================================================
 </pre></td></tr>
 <tr> <td>
 <pre>
+<a href="q/275942.html">Draw an ASCII-art diagram of an S-expression    : 0275942</a>
 <a href="q/274924.html">Shift right by half a trit                      : 0274924</a>
 <a href="q/275939.html">Create 251610 matrices as quickly as possible   : 0275939</a>
 <a href="q/86075.html">Print numbers from 1 to 10                      : 0086075</a>
