--- a/q/59347.html
+++ b/q/59347.html
@@ -605,6 +605,10 @@
 )
 </code></pre>
 <p><a href="https://tio.run/##fZOxboMwEIZ3nsK5Lrg0KmnVDkW3dWiWqkO3hErEdgQqcixCGvEC2au@YV6EOoDBtE4WC@z/@3/uzqiqTDfyvq7LRAlchPH13cOjxzZcIADMPapXjykMI483K9P73j7NcuG/FztBnzxCsrV/IhZMxYgwh2aTkJPlgqs4wJl@F/lY9vxXNnXKPoyMK7fP1yBwO7wZgSoyWfosLXwTSW@E5Log2mHEwl7BpgxxAUAY1RPMYjSUQx20aoWDPDDyyDygiiy30GFz1YU2E@kPJghLCaQ9IoRZrbNh2sG6XyZxgiE1WDvlsWd/eHKdOl1vL7ue@5jj4bsHCdNpYIh2AsDyZE@SQiS8IlysMyk40GilNz4bIbPbPVwrZ9uOhx8rDM@E7aQrpzdmXaz@If4nvPSOhmwL7/yXclWVYksg2JaFnwvZ9Jn2F7KufwE" rel="nofollow noreferrer">Try it online!</a></p>
+<h1>Same thing but with the <code>G</code> command</h1>
+<pre><code>IDG
+</code></pre>
+<p><a href="https://tio.run/##fZOxbsIwFEX3fIV5XeKmqKFVOzR6GxJlqTp0g1QKtlGiRsYKoYgfYK/6h/xIapI4MdSwWI59z732e47alelKPlZVmSiBszC@fXh69tiKCwSA6XiiR48pDCOP1yPT6942zXLhfxQbQV88QrKlfyRmTMWIMIV6kZCj5YyrOMCR/hb5qWx8Lhs6ZZ9GxpXb57sXuB3ejUAVmSx9lha@iaR3QnJ9IdpixMLewKYMcQVAOLlPMIrRUA510KgV9vLAyCMzQRVZbqHD5qYNrTvSbQwQ5hJIs0UIs0pnw7SFdb1M4gBDarCmy6ee3ebRdeh0vb/ueukwh/1PBxKm08AQTQeA5cmWJIVI@I5wscyk4ECjhV74qoXMLnf/rJxlO@x/rTC8ELaRrpzOmLWx@of4n/DaORryXDGBviT20ZsCteeYy8WuFGsCwbos/FzIuh@0e7hV9Qc" rel="nofollow noreferrer">Try it online</a></p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://esolangs.org/wiki/Qdeql" rel="nofollow noreferrer">Qdeql</a>, 8 bytes</h1>
 <pre><code>-\=\/\//
