--- a/q/275906.html
+++ b/q/275906.html
@@ -26,22 +26,28 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>067</td><td>Wolfram Language Mathematica</td><td>241006T113858Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275950#275950">att</a></td></tr>
-<tr d-ix="1"><td>142</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
-<tr d-ix="2"><td>182</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
-<tr d-ix="3"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
-<tr d-ix="4"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
-<tr d-ix="5"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
-<tr d-ix="6"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
-<tr d-ix="7"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
+<tr d-ix="0"><td>264</td><td>C GCC</td><td>241006T144340Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275952#275952">matteo_c</a></td></tr>
+<tr d-ix="1"><td>067</td><td>Wolfram Language Mathematica</td><td>241006T113858Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275950#275950">att</a></td></tr>
+<tr d-ix="2"><td>142</td><td>Python 3</td><td>241003T121136Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275918#275918">Jitse</a></td></tr>
+<tr d-ix="3"><td>182</td><td>Bash</td><td>241003T155715Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275923#275923">Themooni</a></td></tr>
+<tr d-ix="4"><td>102</td><td>JavaScript ES6</td><td>241003T205800Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275931#275931">Arnauld</a></td></tr>
+<tr d-ix="5"><td>025</td><td>Vyxal</td><td>241004T001655Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275933#275933">lyxal</a></td></tr>
+<tr d-ix="6"><td>007</td><td>Charcoal</td><td>241002T215157Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275907#275907">Neil</a></td></tr>
+<tr d-ix="7"><td>017</td><td>Jelly</td><td>241003T150222Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275921#275921">Unrelate</a></td></tr>
+<tr d-ix="8"><td>003</td><td>05AB1E</td><td>241003T095245Z</td><td><a href="https://codegolf.stackexchange.com/questions/275906/simplified-canvas-builtin/275916#275916">Kevin Cr</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 67 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://gcc.gnu.org" rel="nofollow noreferrer">C (GCC)</a>, 264 bytes</h1>
+<pre class="lang-c prettyprint-override"><code>x;y;a;z;b;w;main(n,v)char**v;{for(v++[3]=calloc(4*n,n=strlen(v[1]));v[2][x+n+(y+n)*n]=*v[1]++;++*v)a=x&lt;a?x:a,b=x&gt;b?x:b,w=y&lt;w?y:w,z=y&gt;z?y:z,x-=**v%4?(**v&amp;4)/2-1:0,y-=(**v-=2)%4?(**v&amp;4)-2:0;for(y=w;y&lt;=z;y+=2)for(x=a;x&lt;=b+1;++x)putchar(x&gt;b?10:v[2][n+(y+n)*n+x]?:32);}
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=bVDBToQwFIw3P8OQaChtY1tYMJS3fAghppBdJWG7G9gtLcYv8eLFu7-jX2NRs168vDeZecnMm5e39v6hbd-rgG4Pm2HXjWNnNkH9-nY6bund58WllU4qOctGTnKnOh1qYlD7qIYoMvJpux9Cg3EV19Cqvt-3YRJpomE8Dv1Gh6biNULSVKKuLNY4dFijSNcQLQrGEuPIIAW2UKXNFWnArhuPGjKBK6bS5ROZwa1nj2ZiKXjT66QM_bpJ0K2gPGfEUVgICgL9aVTkTC7pHEzSFTBLh_3BwlhQ0hbQYO7tLTqcjss74eLMWf6d9ZwU27rMY4Hk808hv718lFWQZowLEcdJslqlaZplGWOMc8-JgFwF46EbVP__PPf7BQ" rel="nofollow noreferrer">Attempt This Online!</a></p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 67 bytes</h1>
 <pre><code>SparseArray[Reverse/@(FoldList[Plus,{l=Tr[1^#2],l},#]-&gt;#2),2l,&quot; &quot;]&amp;
 </code></pre>
 <p><a href="https://tio.run/##bVHbaoNAEH2uX2E3pbQ4EjW3h1yw9AKFPoSah8J2C4s1yYJRWTdtxPjtdnYNbSn14IxzOWeP7I6rbbLjSsS8Xc/bqOCyTG6k5BV9Tj4SLPrh1UOevj@JUtFlui@hTucrSf23XsAgbaDH3EUvuIYgBWITdtne5dSqD1A19txe5feHQiZlKfKMklqLkNkiFVkyW5CGsKl1wK26dn3wGtDJx@SZ6J@iZ6LbDUxyTdlQ6jsHhhoVatxuueSxQsdhNbXu420eGhNTaylFpsIwXFOsmYX@8XiIFLY3UZEKRS@iWIpCPWbFXnV9IK8ZYQ1rKbrQYGATrh9yZmEvgAEMYQRjmDAgeaz4Js/O9SzA/q8Xp6XiQsa8TDrqN/TINuh4HTzEGDHUXJvkeAefUij09LM1NGePzN7YMHysupn@MkzHdZ2j0zfpRScMR62Bng0jMH8x@KM2MfBOqv5pL9BmCyF5@n8kXw" rel="nofollow noreferrer" title="Wolfram Language (Mathematica) – Try It Online">Try it online!</a></p>
 <p>Input a list of direction vectors and a list of characters. Output a matrix of characters as a <a href="https://reference.wolfram.com/language/ref/SparseArray.html" rel="nofollow noreferrer"><code>SparseArray</code></a>.</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 142 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://docs.python.org/3/" rel="nofollow noreferrer">Python 3</a>, 142 bytes</h1>
 
 <pre class="lang-python prettyprint-override"><code>f=lambda x,s,p={},c=0,S=sorted:s and f(x[1:]+[c.real,c.imag],s[1:],{**p,c:s[0]},c+x[0])or[[p.get(i+j*1j,' ')for j in S({*x})]for i in S({*x})]
 </code></pre>
@@ -49,7 +55,7 @@
 <p>-42 bytes thanks to UnrelatedString</p>
 <p>Takes complex numbers as input and returns a (square) 2D array of characters with loads of whitespace</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 182 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://www.gnu.org/software/bash/" rel="nofollow noreferrer">Bash</a>, 182 bytes</h1>
 <pre class="lang-bash prettyprint-override"><code>s=&quot;$1&quot;
 e='echo -en'
 shift
@@ -80,7 +86,7 @@ let i++
 <a href="https://i.sstatic.net/zxv2eB5n.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/zxv2eB5n.png" alt="overwriting test case" /></a>
 <a href="https://i.sstatic.net/Jpkt8GJ2.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Jpkt8GJ2.png" alt="octagon! test case" /></a></p>
 </div>
-<div id="pu3" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
+<div id="pu4" class="pu"><h1>JavaScript (ES6), 102 bytes</h1>
 <p>Expects <code>(directions)(characters)</code>, where <em>directions</em> is an array of <code>[dx,dy]</code> vectors and <em>characters</em> is a string. Returns a matrix of characters.</p>
 
 <pre class="lang-javascript prettyprint-override"><code>d=&gt;s=&gt;[...d,m=[...d+=x=y=d.length].map(_=&gt;[...d].fill(&quot; &quot;))].map(([X,Y],i)=&gt;m[y][x]=s[x+=X,y+=Y,i])&amp;&amp;m
@@ -88,7 +94,7 @@ let i++
 <p><a href="https://tio.run/##bVLRbuIwEHznK7bWqbIbxxBK6UNl3u4fqIzvZCUmdRVsFEc9UNtvp/ZCKUKXUbyOZ3Z2V86reTOx7t12KH1o7GEtD41cRLlQQoiGbyTGQu7kXjais74dXrTYmC39e9JosXZdRwkQxo4MVUv@rLljcrFRe612Wka1K@SS7wv5zJ1mt7ebw5MaAShQFUdoDsTkh4Dm38yU3/MZf@Bz/qg5CfVg2uBvfhTTxF68SRMH4/raRHtpc0YWAOLS44hJwjxhln2AhDfb/@vd4Hx7rZ1hTw@onmNelb6OXN5hflGWxUcxxrDMIS0fP05pIsyb4oz3V56PiMnJuzrpptk3bl1vuv@vyX6kR2Id@t@mfkn30HCImoFcwHsq24CEBm/I5SOlqnPTWEorp6GEioOanJtD9pvR7Cn5dHaA3sbktqYNoxEP6@Bj6KzoQksTiWVMLmPEa3CekvR7nHYrT5jo7bYztaXjPxSKlWd34zTc5TldeSjY3a9xiwQUgInXtUhJco41A53PWKI/2eEL" rel="nofollow noreferrer" title="JavaScript (Node.js) – Try It Online">Try it online!</a></p>
 <p>(post-processing: the matrix is joined and some whitespace is removed for readability)</p>
 </div>
-<div id="pu4" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
+<div id="pu5" class="pu"><h1><a href="https://github.com/Vyxal/Vyxal/tree/version-2" rel="nofollow noreferrer">Vyxal</a>, 20 <a href="https://github.com/Vyxal/Vyncode/blob/main/README.md" rel="nofollow noreferrer">bits<sup>v2</a></sup>, 2.5 bytes</h1>
 <pre><code>2ø^
 </code></pre>
 <p><a href="https://vyxal.pythonanywhere.com/?v=2&amp;c=1#WyI9IiwiIiwiMsO4XiIsIiIsIlsxLDIsMyw0LDUsNiw3XVxuXCJvY3RhZ29uIVwiIl0=" rel="nofollow noreferrer">Try it Online!</a></p>
@@ -97,7 +103,7 @@ let i++
 </code></pre>
 <p>Same idea as the 05ab1e answer but without the need for explicit swapping (it uses overloads). Uses the built in canvas digraph with length 2.</p>
 </div>
-<div id="pu5" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
+<div id="pu6" class="pu"><h1><a href="https://github.com/somebody1234/Charcoal" rel="nofollow noreferrer">Charcoal</a>, 7 bytes</h1>
 <pre><code>ＧＨ✳✳Ａ²Ｓ
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjdNA_JzKtPz8zzyc3LyyzVcMotSk0sy8_OKNTzzCkpLNDQ1dRSMdBTAnOCSosy8dKCQ9ZLipORiqBHLo5V0y3KUYm86R0cb6ICgGRCaAqEJGBoBoSGQB5EDscxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: <code>PolygonHollow</code> is Charcoal's path text writing function. It has two modes of operation, one where each direction and path length is specified and one where there is an array of directions and a fixed path length. Here <code>Directions</code> is used to specify an array expression as the directions. However <code>PolygonHollow</code> takes <code>0</code> as right and <code>2</code> as up, so I have amended the test case appropriately. The path length of <code>2</code> is inclusive so that each subsequent step draws one additional character.</p>
@@ -110,7 +116,7 @@ let i++
 </code></pre>
 <p><a href="https://ato.pxeger.com/run?1=m70iOSOxKDk_MWfBgqWlJWm6FjcdAvJzKtPz8zzyc3LyyzVcMotSk0sy8_OKNXwz80qLNQwNdBQ88wpKSzQ0NTV1FIygvOCSosy8dKCY9ZLipORiqGnLo5V0y3KUYm86R0cb6YCgCRCaAqEZGBoAoSGQB5EDsUxidZS0dXW1a7T1wVQEiAISNUqxECMB" rel="nofollow noreferrer">Attempt This Online!</a> Link is to verbose version of code. Explanation: As the first solution but reflects the canvas to get the desired result.</p>
 </div>
-<div id="pu6" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
+<div id="pu7" class="pu"><h1><a href="https://github.com/DennisMitchell/jelly" rel="nofollow noreferrer">Jelly</a>, 17 bytes</h1>
 <pre><code>ZẈ;&quot;$ÄZŒṬ€a&quot;o@/o⁶
 </code></pre>
 <p><a href="https://tio.run/##y0rNyan8/z/q4a4OayWVwy1RRyc93LnmUdOaRKV8B/38R43b/j/c3R1tqKMbqwMkDcCkIZA0AJO6UNIATOqCxXVjQw8v5zq8XD9SM@tR4z4urv//NbgUFDRAGnXAmhWUEkFASVMHKm6kY6xjomOqY6ZjDpLNTy5JTM/PU4QpMAJKImGQkuKSxMyi5MTiVIQhcAiWVwBDhAkQaACEZkBoAjElvyy1qLwosyQzLx1VpQnYOaZgtWZgXYZAHkQOxALr1tbV1a7R1gdTESAKSNTAzAF6BazLCOw5YzQTzcHQAGqyIVSdEdjlBZlFiTnYSSVNLk0A" rel="nofollow noreferrer" title="Jelly – Try It Online">Try it online!</a></p>
@@ -127,7 +133,7 @@ let i++
                o⁶    then replace any remaining 0s with spaces.
 </code></pre>
 </div>
-<div id="pu7" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
+<div id="pu8" class="pu"><h1><a href="https://github.com/Adriandmen/05AB1E/wiki/Commands" rel="nofollow noreferrer">05AB1E</a>, 3 <a href="https://github.com/Adriandmen/05AB1E/wiki/Codepage" rel="nofollow noreferrer">bytes</a></h1>
 <pre><code>2ŠΛ
 </code></pre>
 <p><a href="https://tio.run/##yy9OTMpM/f/f6OiCc7P//4820gFBEyA0BUIzMDQAQkMgDyIHYpnEcmnr6mrXaOuDqQgQBSRqAA" rel="nofollow noreferrer">Try it online.</a></p>
